2023-08-22  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update README for 'no-longer-on-CRAN'

2023-01-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.18
	* configure.ac: Idem
	* configure: Idem

2022-12-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
	* configure.ac: Idem
	* configure: Idem

	* src/global_data.cc: Switch multiple sprintf() to snprintf()
	* src/parse_regressor.cc: Idem
	* src/gd.cc: Switch once to snprintf() (and once to strncpy())
	* src/parser.cc: No longer permit 'multisource' or 'global.daemon'
	options and hence no longer enter daemon mode

	* cleanup: Also remove package check directory if present

2022-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-10-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.17
	* configure.ac: Idem
	* configure: Idem

	* R/vw.R (vw): Get data location via function and not a constant
	which serializes data path -- thanks to Tomas Kalibera for the hint
	* DESCRIPTION (StagedInstall): No longer needed

2022-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.16
	* configure.ac: Idem

	* src/v_array.h (push_many): Protect one null pointer operation

2021-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Updated via 'autoupdate' and 'autoreconf
	--warnings=obsolete' to bring to autoconf 2.69 standards
	* configure: Idem

	* man/vw.Rd: Updated one URL to https
	* DESCRIPTION: Idem

2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL): Add repo to URL field

2021-01-18  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-08-03  Dirk Eddelbuettel  <edd@debian.org>
