@@ -1,3 +1,8 @@
+2024-04-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
+	add r-ci-setup actions
+
 2023-08-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Update README for 'no-longer-on-CRAN'
